# oriented_bounding_box

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
include/: OBB.h  Vec3.h  oriented_bounding_box_node.h
src/: main.cpp  oriented_bounding_box_node.cpp
srv/: GetOBB.srv
